Save profile to database on sign in
